# server/controller/products.go
@@ -12,6 +12,15 @@ func SetupProductRoute(router *gin.Engine) {
 	router.GET("/api/product", GetProductsHandler)
 }
 
+// GetProductsHandler godoc
+// @Summary Get all products
+// @Description Retrieve all products data
+// @Produce json
+// @Param limit query int false "Limit number of products per page"
+// @Param offset query int false "Offset for pagination"
+// @Success 200 {object} object "Successfully retrieved products"
+// @Failure 500 {object} object "Internal Server Error"
+// @Router /api/product [get]
 func GetProductsHandler(c *gin.Context) {
 	limit := c.Query("limit")
 	offset := c.Query("offset")
